--- a/api/package.json
+++ b/api/package.json
@@ -2,12 +2,14 @@
   "name": "task1",
   "version": "1.0.0",
   "description": "hng task1",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  
+  "engines": {
+    "node": "20.x"
+  },
   "author": "Oracle Jnr",
   "license": "ISC",
   "dependencies": {
